[package]
name = "candidate_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
chrono = {version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1", features = ["full"] }